| Summary: | ASTERISK-30083: chan_iax2: Optional dependency on openssl/res_crypto is now mandatory | ||||||||||||||
| Reporter: | Dmitry Melekhov (slesru) | Labels: | |||||||||||||
| Date Opened: | 2022-05-26 07:20:27 | Date Closed: | 2022-07-11 04:11:11 | ||||||||||||
| Priority: | Minor | Regression? | |||||||||||||
| Status: | Closed/Complete | Components: | Channels/chan_iax2 | ||||||||||||
| Versions: | 18.12.0 | Frequency of Occurrence | |||||||||||||
| Related Issues: |
| ||||||||||||||
| Environment: | OEL 8 | Attachments: | |||||||||||||
| Description: | Hello!
It is marked as may use res_crypto, but without it compilation fails: {noformat} [CC] chan_iax2.c -> chan_iax2.o chan_iax2.c: In function 'invalid_key': chan_iax2.c:6386:10: error: request for member 'rd_key' in something not a structure or union if (ecx->rd_key[i]) { ^~ {noformat} Installation of openssl-devel solves problem. Thank you! | ||||||||||||||
| Comments: | By: Asterisk Team (asteriskteam) 2022-05-26 07:20:27.975-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2022-05-26 07:28:48.541-0500 [~InterLinked] It appears as though a change you made (ASTERISK-30007) has now made OpenSSL mandatory for chan_iax2 when it wasn't before. By: N A (InterLinked) 2022-05-26 08:39:31.901-0500 [~jcolp] Any chance this review would fix that (it changes part of that)? https://gerrit.asterisk.org/c/asterisk/+/18534 I imagine that code needs to be surrounded by some kind of #ifdef, but not sure what looking at the related code. By: Joshua C. Colp (jcolp) 2022-05-26 08:42:21.179-0500 I have not looked at that review, so can't comment. By: Friendly Automation (friendly-automation) 2022-07-11 04:11:11.982-0500 Change 18695 merged by Joshua Colp: chan_iax2: Allow compiling without OpenSSL. [https://gerrit.asterisk.org/c/asterisk/+/18695|https://gerrit.asterisk.org/c/asterisk/+/18695] By: Friendly Automation (friendly-automation) 2022-07-11 04:11:24.577-0500 Change 18741 merged by Joshua Colp: chan_iax2: Allow compiling without OpenSSL. [https://gerrit.asterisk.org/c/asterisk/+/18741|https://gerrit.asterisk.org/c/asterisk/+/18741] By: Friendly Automation (friendly-automation) 2022-07-11 04:11:38.459-0500 Change 18743 merged by Joshua Colp: chan_iax2: Allow compiling without OpenSSL. [https://gerrit.asterisk.org/c/asterisk/+/18743|https://gerrit.asterisk.org/c/asterisk/+/18743] By: Friendly Automation (friendly-automation) 2022-07-11 04:12:04.127-0500 Change 18742 merged by Joshua Colp: chan_iax2: Allow compiling without OpenSSL. [https://gerrit.asterisk.org/c/asterisk/+/18742|https://gerrit.asterisk.org/c/asterisk/+/18742] | ||||||||||||||